plugin/src/test/resources/annotator/perl/unreachableCode/forWhenDefault.code
sub test(){
  my $var = 'test';
  for($var){
      say 'before';
      when('test'){
          say 'first';
      }
      say 'mid';
      default{
          say 'default';
      }
      say '<error descr="Unreachable code">after</error>';
  }
  say 'end';
}